Step Definition were added

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse--2009699465\testng-customsuite.xml</span>
+                    <span>C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse-444954874\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runnerPackage.OrangeHRM_runner_1" hash-for-method="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...)">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runnerPackage.OrangeHRM_runner_1" hash-for-method="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...)">
-                  </a> <!-- runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...) -->
+                  <a name="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)">
+                  </a> <!-- runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...) -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in information on the right side of the page", "This is a feature for OrangeHRM")</span>
+                  <span class="parameters">("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by going to Admin page and then click on Job page.", "This is a feature for OrangeHRM")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -138,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse--2009699465\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse-444954874\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,12 +199,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runnerPackage.OrangeHRM_runner_1')
-data.setCell(0, 3, 2374);
+data.setCell(0, 3, 4561);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -216,11 +216,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...)</span>
+              <span class="reporter-method-name">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><div "result">I navigate to Orange HRM page (PASSED : 0s)</div></span>
                 <span class="reporter-method-output"><div "result">I log in with admin credential (PASSED : 1s)</div></span>
                 <span class="reporter-method-output"><div "result">I should be able to see my user info on the right side of the screen. (PASSED : 0s)</div></span>
+                <span class="reporter-method-output"><div "result">I should be able to click on Admin and navigate to &#x27;Job&#x27; page (PASSED : 1s)</div></span>
+                <span class="reporter-method-output"><div "result">I should be able to add a job title by clicking on &#x27;Add&#x27; button (PASSED : 1s)</div></span>
+                <span class="reporter-method-output"><div "result">I should see the new job title get created on the page (PASSED : 0s)</div></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -245,15 +248,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
-                <span class="method-start">4795 ms</span>
+                <span class="method-start">7248 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and see the user log in inf...)</span>
-                <span class="method-start">5175 ms</span>
+                <span class="method-name">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</span>
+                <span class="method-start">7706 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">7558 ms</span>
+                <span class="method-start">12286 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
