--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><div "result">I navigate to Orange HRM page (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I log in with admin credential (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I should be able to see my user info on the right side of the screen. (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should be able to click on Admin and navigate to &#x27;Job&#x27; page (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I should be able to add a job title by clicking on &#x27;Add&#x27; button (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I should see the new job title get created on the page (PASSED : 0s)</div></td></tr>
+</table>
