--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse-444954874\testng-customsuite.xml</span>
+                    <span>C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse--793406223\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runnerPackage.OrangeHRM_runner_1" hash-for-method="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="stepDefinitionPackage.stepDefinition" hash-for-method="runScenario(&quot;As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">runnerPackage.OrangeHRM_runner_1</span>
+              <span class="class-name">stepDefinitionPackage.stepDefinition</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -138,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse-444954874\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\CybertekStudent\AppData\Local\Temp\testng-eclipse--793406223\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;runnerPackage.OrangeHRM_runner_1&quot;/&gt;
+      &lt;class name=&quot;stepDefinitionPackage.stepDefinition&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,13 +198,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'runnerPackage.OrangeHRM_runner_1')
-data.setCell(0, 3, 4561);
+data.setCell(0, 2, 'stepDefinitionPackage.stepDefinition')
+data.setCell(0, 3, 5316);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,22 +241,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">runnerPackage.OrangeHRM_runner_1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">stepDefinitionPackage.stepDefinition</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
-                <span class="method-start">7248 ms</span>
+                <span class="method-start">5283 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("As an Admin user for OrangeHRM, I should be able to log in to OrangeHRM and add a job title by goin...)</span>
-                <span class="method-start">7706 ms</span>
+                <span class="method-start">5706 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">12286 ms</span>
+                <span class="method-start">11053 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
