--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8bb1">  <td>18/03/14 17:18:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM_runner_1.setUp()[pri:0, instance:runnerPackage.OrangeHRM_runner_1@2f686d1f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/03/14 17:19:01</td>   <td>7241</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runnerPackage.OrangeHRM_runner_1@2f686d1f]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/03/14 17:19:02</td>   <td>7698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runnerPackage.OrangeHRM_runner_1@2f686d1f]">runScenario</td> 
-  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/03/14 17:19:06</td>   <td>12280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runnerPackage.OrangeHRM_runner_1@2f686d1f]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>18/03/19 20:07:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM_runner_1.setUp()[pri:0, instance:stepDefinitionPackage.stepDefinition@72d818d1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1050349584</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/03/19 20:07:06</td>   <td>5283</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:stepDefinitionPackage.stepDefinition@72d818d1]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1050349584</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/03/19 20:07:07</td>   <td>5706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:stepDefinitionPackage.stepDefinition@72d818d1]">runScenario</td> 
+  <td>main@1050349584</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/03/19 20:07:12</td>   <td>11053</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:stepDefinitionPackage.stepDefinition@72d818d1]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1050349584</td>   <td></td> </tr>
 </table>
